; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kqworkloop_request_help.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kqworkloop_request_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kqworkloop = type { i32 }

@KQWL_NBUCKETS = common dso_local global i64 0, align 8
@KQWL_UTQ_UPDATE_WAKEUP_QOS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kqworkloop*, i64)* @kqworkloop_request_help to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kqworkloop_request_help(%struct.kqworkloop* %0, i64 %1) #0 {
  %3 = alloca %struct.kqworkloop*, align 8
  %4 = alloca i64, align 8
  store %struct.kqworkloop* %0, %struct.kqworkloop** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @KQWL_NBUCKETS, align 8
  %7 = icmp slt i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.kqworkloop*, %struct.kqworkloop** %3, align 8
  %11 = call i32 @kq_req_lock(%struct.kqworkloop* %10)
  %12 = load %struct.kqworkloop*, %struct.kqworkloop** %3, align 8
  %13 = load i32, i32* @KQWL_UTQ_UPDATE_WAKEUP_QOS, align 4
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @kqworkloop_update_threads_qos(%struct.kqworkloop* %12, i32 %13, i64 %14)
  %16 = load %struct.kqworkloop*, %struct.kqworkloop** %3, align 8
  %17 = call i32 @kq_req_unlock(%struct.kqworkloop* %16)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @kq_req_lock(%struct.kqworkloop*) #1

declare dso_local i32 @kqworkloop_update_threads_qos(%struct.kqworkloop*, i32, i64) #1

declare dso_local i32 @kq_req_unlock(%struct.kqworkloop*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
